force-app/main/default/objects/FSC_Connection__mdt/FSC_Connection__mdt.object-meta.xml
<CustomObject>
    <description>FSC</description>
    <label>FSC Connection</label>
    <pluralLabel>FSC Connections</pluralLabel>
</CustomObject>