force-app/main/default/objects/FSC_Connection__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>FSC</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>application/json</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>