force-app/main/default/objects/FSC_Connection__mdt/fields/End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL__c</fullName>
    <description>FSC</description>
    <label>End Point URL</label>
    <type>Url</type>
</CustomField>