force-app/main/default/objects/FSC_Connection__mdt/fields/Function_Key__c.field-meta.xml
<CustomField>
    <fullName>Function_Key__c</fullName>
    <description>FSC</description>
    <label>Function Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>